examples/conf/TCPRoute_edge_test-tcp-with-plugins.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: test-tcp-with-plugins
  namespace: edge
spec:
  parentRefs:
    - name: example-gateway
      namespace: edge
      sectionName: tcp-8080
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: edgion.io
            kind: EdgionStreamPlugins
            name: example-stream-ip
      backendRefs:
        - name: test-tcp
          port: 8080
          weight: 100
